--- a/packages/resolve-url-loader/package.json
+++ b/packages/resolve-url-loader/package.json
@@ -42,7 +42,7 @@
     "compose-function": "3.0.3",
     "convert-source-map": "1.7.0",
     "es6-iterator": "2.0.3",
-    "loader-utils": "1.2.3",
+    "loader-utils": "^1.2.3",
     "postcss": "7.0.36",
     "rework": "1.0.1",
     "rework-visit": "1.0.0",
